name:                textdecoration
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/L-Solutions/TextDecoration#readme
license:             BSD3
license-file:        LICENSE
author:              Benoît Fraikin
maintainer:          benoit.fraikin@usherbrooke.ca
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
      Data.Text.Color
    , Data.Text.Utils
  build-depends:       
      base >= 4.7 && < 5
    , text >= 1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/L-Solutions/TextDecoration
